Fix regression. Link covering whole story card.

--- a/app/assets/stylesheets/views/_home.scss
+++ b/app/assets/stylesheets/views/_home.scss
@@ -25,6 +25,16 @@
     /* for vertically aligning title/subtitle/contributors */
     transform-style: preserve-3d;
 
+    a.read-more {
+      text-indent: -9999em;
+      z-index: 1;
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+
     header {
       position: relative;
       top: 50%;
